--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ python:
   - 3.7
 script:
   - python -m unittest test.test_config
+  - python -m unittest test.test_dbinflux
   - python -m unittest test.test_docker_utils
