--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ script:
   - python -m unittest test.test_config
   - python -m unittest test.test_dbinflux
   - python -m unittest test.test_docker_utils
+  - python -m unittest test.test_timefuncs
